# presidio-hardened-requests

./: .gitignore  CLAUDE.md  LICENSE  MAINTENANCE.md  PRESIDIO-REQ.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
src/presidio_requests/: __init__.py
tests/: conftest.py  test_cve.py  test_drop_in.py  test_rate_limiter.py  test_redaction.py  test_session.py  test_tls.py
