[build-system]
requires = ["hatchling", "tomli; python_version < '3.11'"]
build-backend = "hatchling.build"

[project]
name = "presidio-hardened-requests"
version = "0.2.0"
description = "Drop-in replacement for requests with Presidio security hardening. Independent of Microsoft Presidio (a data-anonymization toolkit)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Presidio Security", email = "security@presidio.dev" }]
keywords = ["requests", "security", "tls", "hardening", "presidio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.33.0",
    # urllib3 floors help close known CVEs (see SECURITY.md and angellist family practice)
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pygments>=2.20.0",
    "ruff>=0.4.0",
    "responses>=0.26.0",
    "responses>=0.25.0",
    "pip-audit>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/presidio-v/presidio-hardened-requests"
Repository = "https://github.com/presidio-v/presidio-hardened-requests"
Issues = "https://github.com/presidio-v/presidio-hardened-requests/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/presidio_requests"]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"

[tool.coverage.run]
source = ["presidio_requests"]

[tool.coverage.report]
fail_under = 90
show_missing = true
